--- a/Practicas/PrCalendario/Calendario.css
+++ b/Practicas/PrCalendario/Calendario.css
@@ -1,6 +1,11 @@
 body{
     text-align: center;
     font-family: Verdana, sans-serif;
+    background: #2ECC71;
+}
+
+#mical{
+    color: #fff;
 }
 
 #anterior {
@@ -17,7 +22,7 @@ table{
     margin-top:-16px; 
     margin-left:auto; 
     margin-right:auto;
-    width: 400px;
+    width: 600px;
 }
 #fila0{
         margin: 0;
@@ -34,9 +39,10 @@ table{
 .fila{
     background: #eee;
     margin: 0;
+    font-size: 32px;
 }
 #buscafecha{
-    width: 395px;
+    width: 595px;
     font-size: 18px;
     background-color: #2ECC71;
     color: white;
@@ -52,6 +58,7 @@ table{
     background: white;
     border: 1px #2ECC71 solid;
     box-shadow: inset 0 1px 0 #2ECC71;
+    font-weight: bold;
 }
 
 #fechaactual{
